--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -50,6 +50,7 @@ height: fit-content;
     padding: 1rem;
     overflow: hidden;
     transition: 0.5s;
+    
 }
 
 /*
@@ -64,6 +65,7 @@ color: #141824;
 
 #photo{
     padding: 2px;
+    
 }
 
 
@@ -102,7 +104,26 @@ position: relative;
 display: flex;
 height: 40vw;
 width: 30vw;
+top: 1vw;
 background-color: #B2A4FF;
 border: #B2A4FF 1px solid;
-top: 1vw;
+border-radius: 3px;
+box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+ rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+ display: none;
+}
+
+.animation{
+    display: flex;
+}
+
+
+
+@media screen and (max-width:800px) {
+    #header_logo{
+        font-size: 1.5em;
+        font-family: 'Pacifico', cursive;
+        animation: do_a_logo 5s linear infinite;
+        min-height: max-content;
+    }
 }
