--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -92,7 +92,7 @@ align-items: center;
 }
 
 #main-contcts_a img{
-    padding-top: 10px;
+    padding: 5px;
     min-width: 40px;
 }
 
@@ -135,8 +135,6 @@ box-shadow: rgba(228, 92, 92, 0.25) 0px 54px 55px, rgba(202, 69, 255, 0.219) 0px
 
 
 @media screen and (max-width:2505px) {
-
-
     #content{
     top: 4vh;
     height: 75vh;
@@ -154,19 +152,9 @@ box-shadow: rgba(228, 92, 92, 0.25) 0px 54px 55px, rgba(202, 69, 255, 0.219) 0px
     #cp-right{
         font-size: 22px;
     }
-
 }
 
-
-
-
-
-
-
-
-
 @media screen and (max-width:1545px) {
-
     h1{
         font-size: 30px;
     }
@@ -176,11 +164,7 @@ box-shadow: rgba(228, 92, 92, 0.25) 0px 54px 55px, rgba(202, 69, 255, 0.219) 0px
     height: 73vh;
     width: 60vw;
     }
-
-
 }
-
-
 
 
 @media screen and (max-width:800px) {
@@ -210,12 +194,57 @@ box-shadow: rgba(228, 92, 92, 0.25) 0px 54px 55px, rgba(202, 69, 255, 0.219) 0px
     }
 
     #cp-right{
-        font-size: 25px;
+        font-size: 18px;
+    }
+
+    #main-contcts_a img{
+        padding-bottom: 10px;
+        min-width: 30px;
+    }
+
+    #burger div{
+        display: block;
+    }
+    
+    #text{
+    display: none;
+    }
+}
+
+
+@media screen and (max-width:500px) {
+
+    #text{
+        font-size: 15px;
+    }
+
+    h1{
+        font-size: 20px;
+    }
+
+    #header_logo{
+        font-size: 1.7em;
+    }
+
+    #content{
+    top: 13vh;
+    height: 50vh;
+    width: 80vw;
+    }
+
+    footer{
+        padding-left: 1%;
+        padding-right: 1%;
+        padding-top: 1%;
+    }
+
+    #cp-right{
+        font-size: 13px;
     }
 
     #main-contcts_a img{
         padding-top: 10px;
-        min-width: 30px;
+        max-width: 13px;
     }
 
 
@@ -226,7 +255,4 @@ box-shadow: rgba(228, 92, 92, 0.25) 0px 54px 55px, rgba(202, 69, 255, 0.219) 0px
     #text{
     display: none;
     }
-
-
 }
-
