--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -54,10 +54,9 @@ nav{
 justify-content: space-between;
 height: fit-content;
 padding: 1rem;
-
 }
 
-#text{
+nav a{
     display: inline;
     list-style-type: none;
     text-decoration: none;
@@ -71,11 +70,12 @@ padding: 1rem;
 #burger div{
 cursor: pointer;
 width: 30px;
-height: 5px;
+height: 4px;
 margin: 5px;
 background-color: #fdfdfd;
 display: none;
 padding-left: 3%;
+transition: all 0.3s ease;
 }
 
 #photo{
@@ -147,6 +147,42 @@ h2{
 span{
     color: #7400d2;
 }
+
+
+.toggle .line_one{
+transform: rotate(-45deg) translate(-9px , 4px);
+}
+.toggle .line_dwo{
+opacity: 0;
+}
+.toggle .line_three{
+    transform: rotate(45deg) translate(-9px , -4px);
+}
+
+.nav_active{
+    transform: translateX(0%);
+}
+
+@keyframes navLink {
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+
+
+
+
+
+
+
+
+
 
 
 @media screen and (max-width:2505px) {
@@ -263,7 +299,7 @@ span{
         padding: 0;
         margin: 0;
         transform: translateX(100%);
-        
+        transition: transform 0.5s ease-in;
     }
     #text{
         width: 100%;
