--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -1,3 +1,5 @@
+
+
 *{
     margin: 0;
     
@@ -5,7 +7,8 @@
 
 *, *::before, *::after{
     box-sizing: border-box;
-    color: #86C232;
+    color: #E9C893;
+    
     }
 
 body{
@@ -24,6 +27,7 @@ html{
     margin: 0;
     padding: 0;
     overflow: hidden;
+    
 }
 
 header{
@@ -46,7 +50,29 @@ header{
     list-style-type: none;
     text-decoration: none;
     width: 50vw;
-}
+    text-transform: uppercase;
+    background-image: linear-gradient(
+    -225deg,
+    #571529 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #ffee00 100%
+      );
+      background-size: auto auto;
+      background-clip: border-box;
+      background-size: 200% auto;
+      color: #fff;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: textclip 6s linear infinite;
+      display: inline-block;
+    }
+    
+    @keyframes textclip {
+      to {
+        background-position: 200% center;
+      }
+    }
 
 @keyframes do_a_logo{ 0%{color:#FFF9CA ;}  25%{color:#B2A4FF ;} 50%{color:#FFB4B4 ;} 75%{color:#D2001A ;} 100%{color:#FFF9CA ;} }
 
@@ -126,11 +152,10 @@ display: flex;
 height: 37vw;
 width: 30vw;
 top: 2vw;
-background-color: #151b29;
+background-color: #1D2731;
 border: #DEB992 1px solid;
 border-radius: 3px;
-box-shadow: rgba(228, 92, 92, 0.25) 0px 54px 55px, rgba(202, 69, 255, 0.219) 0px -12px 30px, rgba(100, 82, 82, 0.219) 0px 4px 6px,
- rgba(0, 0, 0, 0.178) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
 .animation{
