--- a/CSS/ABOUT.CSS
+++ b/CSS/ABOUT.CSS
@@ -40,7 +40,8 @@ header{
     justify-content: space-between;
     position: sticky;
     z-index: 100;
-    height: 10vh;
+    height: 8vh;
+    
 }
 
 #header_logo{
@@ -122,18 +123,19 @@ height: fit-content;
 
 }
 
+
 nav a{
     display: inline;
     list-style-type: none;
     text-decoration: none;
     padding-right: 1.8rem;
     padding-left: 1.8rem;
-    padding-bottom: 2.1rem;
+    padding-bottom: 1.5rem;
     padding-top: 2.1rem;
     overflow: hidden;
     transition: 0.5s;
     width: 100%;
-
+    color: #E9C893;
 }
 
 #burger div{
@@ -221,9 +223,9 @@ opacity: 0;
 }
 
 @media screen and (max-width:1800px) {
-nav a{
-    padding-bottom: 1.8rem;
-}
+        nav a{
+            padding-bottom: 1.3rem;
+        }
 }
 
 
