--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -146,15 +146,12 @@ background: #5c5b5b28 ;
 #content{
 padding: 1%;
 justify-content: center;
+align-items: center;
 position: relative;
 display: flex;
 height: 37vw;
 width: 30vw;
 top: 2vw;
-background-color: #1D2731;
-border: #DEB992 1px solid;
-border-radius: 3px;
-box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 color: #E9C893;
 }
 
@@ -171,6 +168,7 @@ h2{
 
 span{
     color: #7400d2;
+    text-decoration: underline solid 2px ;
 }
 
 
@@ -247,7 +245,18 @@ font-size: 32px;
 }
 
 
+@media screen and (min-height :600px) and (min-width:800px)  {
+    header{
+        overflow: hidden;
+    }
+}
 
+@media screen and (max-height :900px) and (max-width:800px)  {
+    header{
+        overflow: visible;
+    }
+
+    }
 
 
 @media screen and (max-width:2505px) {
@@ -301,7 +310,9 @@ nav a{
     height: 73vh;
     width: 60vw;
     }
-
+    #header_logo{
+        margin-right: 7vw;
+    }
 }
 
 
@@ -329,10 +340,11 @@ nav a{
         padding-top: 2.1rem;
     }
 }
-@media screen and (max-width:1100px) {
+@media screen and (max-width:1150px) {
 
     #header_logo{
         width: 40vw;
+        margin-right: 5vw;
     }
 
     #text{
