--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -38,7 +38,7 @@ header{
     position: sticky;
     z-index: 100;
     height: 8vh;
-    
+    background-color: #180814ea;
 }
 
 #header_logo{
@@ -116,14 +116,15 @@ footer{
 width: 100%;
 border-top: #DEB992 1px solid ;
 position: absolute;
-bottom: 1%;
+bottom: 0%;
 display: flex;
 padding-left: 3%;
 padding-right: 3%;
 padding-top: 1%;
+padding-bottom: 0.5%;
 justify-content: space-between;
 align-items: center;
-
+background-color: #180814ea;
 }
 
 
