--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -20,11 +20,10 @@ body{
 html{
     font-family: 'Poppins', sans-serif;
     height:100%;
-    background: #1A1A1D ;
+    background-color: #DFDBE5;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    
 }
 
 header{
@@ -38,7 +37,6 @@ header{
     position: sticky;
     z-index: 100;
     height: 8vh;
-    background-color: #180814ea;
 }
 
 #header_logo{
