--- a/CSS/ABOUT.CSS
+++ b/CSS/ABOUT.CSS
@@ -94,6 +94,7 @@ header{
         max-width: 80%;
         padding: 0.1rem;
         border: #DEB992 1px solid ;
+        background-color: #461219be;
       }
       
       .product-item img {
