--- a/CSS/ABOUT.CSS
+++ b/CSS/ABOUT.CSS
@@ -1,6 +1,4 @@
 
-
-
 *{
     margin: 0;
     
@@ -8,8 +6,6 @@
 
 *, *::before, *::after{
     box-sizing: border-box;
-    color: #E9C893;
-    
     }
 
 body{
@@ -41,11 +37,6 @@ header{
     position: sticky;
     z-index: 100;
     height: 8vh;
-    position: fixed;
-    background-color: #180814ea;
-}
-.bodyl{
-    padding-top: 10vh;
 }
 
 #header_logo{
@@ -62,7 +53,7 @@ header{
     #571529 0%,
     #44107a 29%,
     #ff1361 67%,
-    #ffee00 100%
+    #a6ff00 100%
       );
       background-size: auto auto;
       background-clip: border-box;
@@ -70,7 +61,7 @@ header{
       color: #fff;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      animation: textclip 6s linear infinite;
+      animation: textclip 10s linear infinite;
       display: inline-block;
     }
     
@@ -162,20 +153,6 @@ transition: all 0.3s ease;
 }
 
 
-footer{
-width: 100%;
-border-top: #DEB992 1px solid ;
-position: absolute;
-bottom: 1%;
-display: flex;
-padding-left: 3%;
-padding-right: 3%;
-padding-top: 1%;
-justify-content: space-between;
-align-items: center;
-
-}
-
 
 
 
@@ -237,19 +214,43 @@ opacity: 0;
 
 
 @media screen and (max-width:2505px) {
+
     #text{
         font-size: 20px;
     }
+
+    footer{
+        padding-left: 1%;
+        padding-right: 1%;
+        padding-top: 1%;
+        height: 8vh;
+    }
+    nav{
+        margin-left: 200px ;
+    }
+}
+@media screen and (max-width:1800px) {
+nav a{
+    padding-bottom: 1.3rem;
+}
+    
 }
 
-@media screen and (max-width:1800px) {
-        nav a{
-            padding-bottom: 1.3rem;
-        }
+
+
+@media screen and (max-width:1579px) {
+
+    #header_logo{
+        margin-right: 7vw;
+    }
+    nav{
+        margin-left: 0 ;
+    }
 }
 
 
 @media screen and (max-width:1350px) {
+
     #header_logo{
         width: 50vw;
     }
@@ -264,10 +265,11 @@ opacity: 0;
         padding-top: 2.1rem;
     }
 }
-@media screen and (max-width:1100px) {
+@media screen and (max-width:1150px) {
 
     #header_logo{
         width: 40vw;
+        margin-right: 5vw;
     }
 
     #text{
@@ -276,6 +278,7 @@ opacity: 0;
 }
 
 @media screen and (max-width:1000px) {
+
     #header_logo{
         width: 36vw;
     }
@@ -286,7 +289,7 @@ opacity: 0;
 
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 820px) {
 
 
     #header_logo{
@@ -329,12 +332,26 @@ opacity: 0;
 
 
 
+
+@media screen and (max-width: 600px) {
+
+    #main-contats{
+        clear: both;
+    }
+
+
+}
+
+
 @media screen and (max-width:500px) {
+
+    #text{
+        font-size: 15px;
+    }
 
     #header_logo{
         font-size: 1.7em;
     }
-
 
 
     #burger div{
@@ -343,3 +360,11 @@ opacity: 0;
     
 }
 
+@media screen and (max-width:430px) {
+
+
+    #main-contcts{
+        margin: 0;
+    }
+    
+}
