--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -202,51 +202,64 @@ opacity: 0;
 }
 
 
-#fa{
-font-size: 32px; 
-}
+
 
 .fa-active{
     background-color: #37373d3a;
     border-radius: 5px ;
 }
 
-@keyframes Do_Fa1 {
-    0%{color:#FFF9CA ;}  
-    50%{color:	#7289DA ;}
-    100%{color:#FFF9CA ;} 
-}
-@keyframes Do_Fa2 {
-    0%{color:#FFF9CA ;}  
-    50%{color:#d7e606 ;}
-    100%{color:#FFF9CA ;} 
-}
-@keyframes Do_Fa3 {
-    0%{color:#FFF9CA ;}  
-    50%{color:#D2001A ;}
-    100%{color:#FFF9CA ;} 
-}
 
 #all:first-child {
-    animation: Do_Fa1 3s linear infinite;
+    margin-right: 10px;
     }
-#all:nth-child(2) {
-    animation: Do_Fa2 5.5s linear infinite;
-}
+
 #all:last-child {
-    animation: Do_Fa3 8s linear infinite;
+    margin-left: 10px;
 }
 
 
-.fa-bounce{
-    --fa-bounce-start-scale-x: 1;
-    --fa-bounce-start-scale-y: 1;
-    --fa-bounce-jump-scale-x: 1;
-    --fa-bounce-jump-scale-y: 1;
-    --fa-bounce-land-scale-x: 1;
-    --fa-bounce-land-scale-y: 1;
-    --fa-bounce-rebound: 0;
+    
+.icons{
+    display: flex;
+    column-gap: 25px;
 }
+
+.icon{
+    width: 50px;
+    height: 50px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    font-size: 26px;
+    color: rgb(255, 255, 255);
+    border-radius: 20%;
+    outline: 2px solid rgba(255, 255, 255, 0.178);
+    transition-property: outline-offset, outline-color, background-color;
+    transition-duration: .25s;
+}
+.icon:hover{
+    outline-offset: 4px;
+}
+.icon:hover i{
+    animation: shake .25s;
+}
+.icon--instagram:hover{
+    background-image: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%) ;
+    outline-color: #a02d76 ;
+}
+
+.icon--github:hover{
+    background-color: #3F0071;
+    outline-color: #3F0071;
+}
+
+.icon--discord:hover{
+    background-color: #7289DA;
+    outline-color: #7289DA;
+}
+
 
 
 @media screen and (min-height :600px) and (min-width:800px)  {
@@ -284,15 +297,14 @@ font-size: 32px;
     }
 
     #fa{
-        font-size: 37px;
+        font-size: 42px;
         padding: 10px;
     }
-
+    
     footer{
-        padding-left: 1%;
-        padding-right: 1%;
-        padding-top: 1%;
+        padding: 2% 2% 1.5% 2%;
         height: 8vh;
+        overflow: hidden;
     }
     nav{
         margin-left: 200px ;
@@ -345,6 +357,9 @@ nav a{
         padding-bottom: 1.3rem;
         padding-top: 2.1rem;
     }
+    footer{
+        padding: 3% 2% 3% 2%;
+    }
 }
 @media screen and (max-width:1150px) {
 
@@ -376,10 +391,6 @@ nav a{
 }
 
 
-
-
-
-
 @media screen and (max-width: 820px) {
 
     #content{
@@ -404,8 +415,12 @@ nav a{
     }
 
     #fa{
-        font-size: 3;
+        font-size: 35px;
         padding: 10px;
+    }
+    .icon{
+        width: 45px;
+        height: 45px;
     }
 
     #burger div{
@@ -449,6 +464,11 @@ nav a{
         font-size: 33px;
         padding: 10px;
     }
+
+    .icon{
+        width: 40px;
+        height: 40px;
+    }
 }
 
 
@@ -469,7 +489,10 @@ nav a{
         padding: 7px;
         clear: both;
     }
-
+    .icon{
+        width: 37px;
+        height: 37px;
+    }
     #main-contats{
         clear: both;
     }
@@ -517,7 +540,10 @@ nav a{
     #fa{
         font-size: 25px;
     }
-
+    .icon{
+        width: 27px;
+        height: 27px;
+    }
 
     #burger div{
         display: block;
