--- a/CSS/About/about.CSS
+++ b/CSS/About/about.CSS
@@ -14,6 +14,7 @@ body{
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
+    font-family: 'Poppins', sans-serif;
 }
 
 
@@ -84,7 +85,7 @@ header{
 
 
       .product-list {
-        margin: 0 2rem;
+        margin: 0 3rem;
         padding: 0;
         position: relative;
         margin-top: 5%;
@@ -101,7 +102,7 @@ header{
         justify-content: center;
       }
       .product-item {
-        margin: 2rem auto;
+        margin: 10px auto;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
         width: 28vw;
         min-height: 190px;
@@ -175,7 +176,7 @@ header{
       }
       .product-item h2,
       .product-item h3 {
-        margin: 0 0 1rem 0;
+        margin: 0 0 0.5rem 0;
       }
 
       #app{
@@ -330,7 +331,7 @@ opacity: 0;
 nav a{
     padding-bottom: 1.3rem;
 }
-    
+
 }
 
 
@@ -342,6 +343,9 @@ nav a{
     }
     nav{
         margin-left: 0 ;
+    }
+    .product-item{
+        width: 35vw;
     }
 }
 
@@ -381,6 +385,7 @@ nav a{
     #text{
         font-size: 19px;
     }
+
 }
 
 @media screen and (max-width:1000px) {
@@ -483,7 +488,7 @@ nav a{
         min-width: 90vw;
     }
     #opisa{
-        margin-top: 50px;
+        margin-top: 5vh;
         font-size: 30px;
     }
 }
