--- a/CSS/Main/Main.css
+++ b/CSS/Main/Main.css
@@ -1,3 +1,5 @@
+
+
 * {
   margin: 0;
 }
@@ -12,6 +14,7 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  font-family: 'Montserrat';
 }
 
 .color_new {
