--- a/CSS/About/about.CSS
+++ b/CSS/About/about.CSS
@@ -1,13 +1,9 @@
-
 *{
     margin: 0;
-    
 }
-
 *, *::before, *::after{
     box-sizing: border-box;
-    }
-
+}
 body{
     align-items: center;
     justify-content: center;
@@ -16,22 +12,18 @@ body{
     overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
 }
-
-
 html{
     font-family: 'Poppins', sans-serif;
     height:100%;
     background: #1A1A1D ;
     margin: 0;
     padding: 0;
-
+    overflow-x: hidden;
 }
-
-
 header{
     padding-left: 2%;
     padding-right: 2%;
-    width: 100%;
+    width: 100vw;
     border-bottom: #DEB992 1px solid ;
     align-items: center;
     display: flex;
@@ -42,8 +34,8 @@ header{
     position: fixed;
     top: 0;
 }
-
 #header_logo{
+    justify-content: right;
     font-size: 2.5em;
     font-family: 'Pacifico', cursive;
     animation: do_a_logo 5s linear infinite;
@@ -52,174 +44,146 @@ header{
     text-decoration: none;
     width: 50vw;
     text-transform: uppercase;
-    background-image: linear-gradient(
-    -225deg,
-    #571529 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #a6ff00 100%
-      );
-      background-size: auto auto;
-      background-clip: border-box;
-      background-size: 200% auto;
-      color: #fff;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: textclip 10s linear infinite;
-      display: inline-block;
-    }
-    
-    @keyframes textclip {
-      to {
+    background-image: linear-gradient( -225deg, #571529 0%, #44107a 29%, #ff1361 67%, #a6ff00 100% );
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 10s linear infinite;
+    display: inline-block;
+}
+@keyframes textclip {
+    to {
         background-position: 200% center;
-      }
-    }
-      
-
-
-
+   }
+}
 /* In Progress*/
-
-
-
-
-
-      .product-list {
-        margin: 0 3rem;
-        padding: 0;
-        position: relative;
-        margin-top: 5%;
-        display: flexbox;
-      }
-      
-
-      #opisa{
-        display: flex;
-        font-size: 30px;
-        font-weight: 700;
-        color: #E9C893;
-        align-items: center;
-        justify-content: center;
-      }
-      .product-item {
-        margin: 10px auto;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-        width: 28vw;
-        min-height: 190px;
-        max-width: 80%;
-        padding: 0.1rem;
-        border-radius: 15px;
-        background-color: #251B37;
-        display: flex;
-        padding: 2% 3% 2% 3%;
-        align-items: center;
-
-      }
-      .lasty{
-        justify-content: center;
-        align-items: center;
-        background-color: #571529;
-      }
-      
-      
-      .product-item_2 {
-        background-color: #f7f2ff;
-      }
-      
-      
-      .product-item img {
-        width: 40%;
-        max-height: 25vh;
-        object-fit: cover;
-        border-radius: 15px;
-      }
-      
-      .product-item__content {
-        margin: 0 5% 0 5%;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-        color: #DEB992;
-        width: 50%;
-      }
-
-      button{
-        background: none;
-        border: none;
-        border-radius: 5px;
-        padding: 8px 16px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        transition-duration: 0.4s;
-        cursor: pointer;
-        font-family: 'Poppins', sans-serif;
-        animation: do_a_logo 5s linear infinite;
-        font-size: 24px;
-        font-weight: 700;
-      }
-      button:hover{
-        background-color: #181224;
-        border: none;
-        border-radius: 5px;
-      }
-      
-      h2 a{
-        list-style-type: none;
-        text-decoration: none;
-        animation: do_a_logo 5s linear infinite;
-      }
-      h3 a{
-        list-style-type: none;
-        text-decoration: none;
-        color: #E9C893;
-      }
-      .product-item h2,
-      .product-item h3 {
-        margin: 0 0 0.5rem 0;
-      }
-
-      #app{
-        display: flex;
-        width: 100vw;
-        align-items: center;
-        justify-content: center;
-      }
-
-
-
-
-      .testa{
-        background-color: #190a35;
-      }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@keyframes text{ 
-    
-    100%{background-color: #8f62e2;} 
+.product-list {
+    margin: 0 3rem;
+    padding: 0;
+    position: relative;
+    margin-top: 5%;
+    display: flexbox;
 }
-      
-@keyframes do_a_logo{ 0%{color:#FFF9CA ;}  25%{color:#B2A4FF ;} 50%{color:#FFB4B4 ;} 75%{color:#D2001A ;} 100%{color:#FFF9CA ;} }
-
+#opisa{
+    display: flex;
+    font-size: 30px;
+    font-weight: 700;
+    color: #E9C893;
+    align-items: center;
+    justify-content: center;
+}
+.product-item {
+    margin: 10px auto;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    width: 28vw;
+    min-height: 190px;
+    max-width: 80%;
+    padding: 0.1rem;
+    border-radius: 15px;
+    background-color: #251B37;
+    display: flex;
+    padding: 2% 3% 2% 3%;
+    align-items: center;
+}
+.lasty{
+    justify-content: center;
+    align-items: center;
+    background-color: #571529;
+}
+.product-item_2 {
+    background-color: #f7f2ff;
+}
+.ab{
+    width: 40%;
+    max-height: 25vh;
+    object-fit: cover;
+    border-radius: 15px;
+}
+.product-item img {
+    width: 100%;
+    max-height: 25vh;
+    object-fit: cover;
+    border-radius: 15px;
+}
+.product-item__content {
+    margin: 0 5% 0 5%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #DEB992;
+    width: 50%;
+}
+button{
+    background: none;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    animation: do_a_logo 5s linear infinite;
+    font-size: 24px;
+    font-weight: 700;
+}
+button:hover{
+    background-color: #181224;
+    border: none;
+    border-radius: 5px;
+}
+h2 a{
+    list-style-type: none;
+    text-decoration: none;
+    animation: do_a_logo 5s linear infinite;
+}
+h3 a{
+    list-style-type: none;
+    text-decoration: none;
+    color: #E9C893;
+}
+.product-item h2, .product-item h3 {
+    margin: 0 0 0.5rem 0;
+}
+#app{
+    display: flex;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+}
+.testa{
+    background-color: #190a35;
+}
+@keyframes text{
+    100%{
+       background-color: #8f62e2;
+   }
+}
+@keyframes do_a_logo{
+    0%{
+       color:#FFF9CA ;
+   }
+    25%{
+       color:#B2A4FF ;
+   }
+    50%{
+       color:#FFB4B4 ;
+   }
+    75%{
+       color:#D2001A ;
+   }
+    100%{
+       color:#FFF9CA ;
+   }
+}
 nav{
-justify-content: space-between;
-height: fit-content;
-
+    justify-content: space-between;
+    height: fit-content;
 }
-
-
 nav a{
     display: inline;
     list-style-type: none;
@@ -233,194 +197,139 @@ nav a{
     width: 100%;
     color: #E9C893;
 }
-
 #burger div{
-cursor: pointer;
-width: 30px;
-height: 4px;
-margin: 5px;
-background-color: #fdfdfd;
-display: none;
-padding-left: 3%;
-transition: all 0.3s ease;
+    cursor: pointer;
+    width: 30px;
+    height: 4px;
+    margin: 5px;
+    background-color: #fdfdfd;
+    display: none;
+    padding-left: 3%;
+    transition: all 0.3s ease;
 }
-
 #photo{
     padding: 2px;
-    
 }
-
-
-
-
-
 #photo:hover{
-background: #5c5b5b28 ;
+    background: #5c5b5b28 ;
 }
-
-
-
 .activel{
     background-color: #DEB992;
     font-weight: 800;
     color: #141824;
-
 }
-
-
-
-
 .toggle .line_one{
-transform: rotate(-45deg) translate(-9px , 4px);
+    transform: rotate(-45deg) translate(-9px , 4px);
 }
 .toggle .line_dwo{
-opacity: 0;
+    opacity: 0;
 }
 .toggle .line_three{
     transform: rotate(45deg) translate(-9px , -4px);
 }
-
 .nav_active{
     transform: translateX(0%);
 }
-
 @keyframes navLink {
     from{
         opacity: 0;
         transform: translateX(50px);
-    }
+   }
     to{
         opacity: 1;
         transform: translateX(0px);
-    }
+   }
 }
-
-
-
-@media screen and (min-height :600px) and (min-width:800px)  {
+@media screen and (min-height :600px) and (min-width:800px) {
     header{
         overflow: hidden;
-    }
+   }
 }
-
-@media screen and (max-height :900px) and (max-width:800px)  {
+@media screen and (max-height :900px) and (max-width:800px) {
     header{
         overflow: visible;
-    }
-
-    }
-
-
+   }
+}
 @media screen and (max-width:2505px) {
-
     #text{
         font-size: 20px;
-    }
-
+   }
     footer{
         padding-left: 1%;
         padding-right: 1%;
         padding-top: 1%;
         height: 8vh;
-    }
+   }
     nav{
         margin-left: 200px ;
-    }
+   }
 }
 @media screen and (max-width:1800px) {
-nav a{
-    padding-bottom: 1.3rem;
+    nav a{
+        padding-bottom: 1.3rem;
+   }
 }
-
-}
-
-
-
 @media screen and (max-width:1579px) {
-
     #header_logo{
         margin-right: 7vw;
-    }
+   }
     nav{
         margin-left: 0 ;
-    }
+   }
     .product-item{
         width: 35vw;
-    }
+   }
 }
-
-
 @media screen and (max-width:1350px) {
-
     #header_logo{
         width: 50vw;
-    }
+   }
     header{
         height: 8vh;
-    }
-
+   }
     nav a{
         padding-right: 1.2rem;
         padding-left: 1.2rem;
         padding-bottom: 1.3rem;
         padding-top: 2.1rem;
-    }
+   }
 }
-
 @media screen and (max-width:1320px) {
     .product-item__content button {
         font-size: 20px;
-    }
+   }
     .product-item__content{
         font-size: 15px;
-    }
+   }
 }
 @media screen and (max-width:1150px) {
-   
     #header_logo{
         width: 40vw;
         margin-right: 5vw;
-    }
-
+   }
     #text{
         font-size: 19px;
-    }
-
+   }
 }
-
 @media screen and (max-width:1000px) {
-
     #header_logo{
         width: 36vw;
-    }
-
+   }
     .product-item__content {
         font-size: 15px;
-      }
+   }
 }
-
-
-
-
-
-
 @media screen and (max-width: 820px) {
-
-
     #header_logo{
         font-size: 3em;
-    }
-
-
+   }
     #burger div{
         display: block;
-    }
-    
-    
+   }
     nav{
         position: absolute;
         right: 0px;
-        height: 94vh;
+        height: 92vh;
         top: 8vh;
         background-color: #151b29f6;
         display: flex;
@@ -431,7 +340,7 @@ nav a{
         margin: 0;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
-    }
+   }
     #text{
         width: 100%;
         height: 24vh;
@@ -440,55 +349,43 @@ nav a{
         align-items: center;
         justify-content: center;
         display: flex;
-    }
-
-
+   }
 }
-
-
-
-
 @media screen and (max-width: 600px) {
-
     #main-contats{
         clear: both;
-    }
-
-
+   }
 }
-
-
 @media screen and (max-width:500px) {
-
     #text{
         font-size: 15px;
-    }
-
+   }
     #header_logo{
         font-size: 1.7em;
-    }
-
-
-    #burger div{
-        display: block;
-    }
-    
+   }
+    button{
+        padding: 0;
+   }
+    .product-list {
+        display: flexbox;
+        width: 90vw;
+        height: auto;
+        align-content: center;
+        justify-content: center;
+   }
 }
-
 @media screen and (max-width:430px) {
-
-
     #main-contcts{
         margin: 0;
-    }
+   }
     .testa{
         background-color: #190a35;
         max-height: 170px;
         min-height: 100px;
         min-width: 90vw;
-    }
+   }
     #opisa{
         margin-top: 5vh;
         font-size: 30px;
-    }
+   }
 }
